...
        const val button5 = "pin.button5"
        const val button6 = "pin.button6"
        const val button7 = "pin.button7"
        const val button8 = "pin.button8"
        const val button9 = "pin.button9"
        const val buttonBackspace = "pin.buttonBackspace"
        const val confirmButton = "pin.confirmButton"
        const val pinTextField = "pin.pinTextField"
        const val restoreButton = "pin.restoreButton"
    }
    object Profits {
        const val subtitleLabel = "profits.subtitleLabel"
        const val totalInvestmentLabel = "profits.totalInvestmentLabel"
        const val totalProfitLabel = "profits.totalProfitLabel"
        const val totalValueLabel = "profits.totalValueLabel"
...
            const val feeFastButton = "send.confirm.feeFastButton"
            const val feeMediumButton = "send.confirm.feeMediumButton"
            const val feeSlowButton = "send.confirm.feeSlowButton"
        }
        const val currencyButton = "send.currencyButton"
        const val currencyLabel = "send.currencyLabel"
        const val nextButton = "send.nextButton"
        const val pasteButton = "send.pasteButton"
        const val regularButton = "send.regularButton"
        const val scanButton = "send.scanButton"
        const val switchQuestionButton = "send.switchQuestionButton"
        const val toLabel = "send.toLabel"
        const val toTextField = "send.toTextField"
...
            }
            object Otp {
                const val codeButton = "signup.bittr.otp.codeButton"
                const val codeTextField = "signup.bittr.otp.codeTextField"
                const val nextButton = "signup.bittr.otp.nextButton"
                const val resendButton = "signup.bittr.otp.resendButton"
                const val topLabel = "signup.bittr.otp.topLabel"
            }
            object Start {
                const val emailButton = "signup.bittr.start.emailButton"
                const val emailTextField = "signup.bittr.start.emailTextField"
                const val ibanButton = "signup.bittr.start.ibanButton"
                const val ibanTextField = "signup.bittr.start.ibanTextField"
...
            object PinConfirm {
                const val topLabel = "signup.restore.pinConfirm.topLabel"
            }
            object PinSet {
                const val topLabel = "signup.restore.pinSet.topLabel"
            }
            const val removeWalletButton = "signup.restore.removeWalletButton"
            const val topLabel = "signup.restore.topLabel"
        }
    }
    object Swap {
        const val amountTextField = "swap.amountTextField"
        const val fromButton = "swap.fromButton"
...
